--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@
 /autoheader_dummy.h.in~
 /configure
 /Makefile.in
+/m4/libtool.m4
+/m4/lt~obsolete.m4
+/m4/ltargz.m4
+/m4/ltdl.m4
+/m4/ltoptions.m4
+/m4/ltsugar.m4
+/m4/ltversion.m4
