Parallel and Bitonic sort - neither very useful...
Signed-off-by: Rick Taylor <rick@tropicalstormsoftware.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,7 +11,8 @@ workshare_SOURCES = \
 	src/threads.c \
 	src/proactor.c \
 	src/parallel_for.c \
-	src/parallel_sort.c
+	src/parallel_sort.c \
+	src/bitonic_sort.c
 			
 #thehouse_LDADD += -lglfw -lGL
 
