--- a/Makefile.am
+++ b/Makefile.am
@@ -3,14 +3,9 @@ ACLOCAL_AMFLAGS = -I m4
 bin_PROGRAMS = workshare
 
 workshare_SOURCES = \
-	src/test.c \
 	src/task.c \
 	src/threads.c \
-	src/proactor.c \
-	src/parallel_for.c \
-	src/merge_sort.c \
-	src/bitonic_sort.c \
-	src/quicksort.c
+	src/proactor.c
 			
 if WIN32
 workshare_CPPFLAGS = -D_WIN32_WINNT=_WIN32_WINNT_WIN7
